# QUB_URDF

./: .gitignore  Acknowledgments  readme.md
src/QUB_URDF/: CMakeLists.txt  package.xml
src/QUB_URDF/config/: joint_names_QUB_visual_URDF.yaml
src/QUB_URDF/launch/: QUB_visual_URDF display.launch.py  display.launch  gazebo.launch
src/QUB_URDF/meshes/: l_ankle_roll.STL  l_ankle_roll_collision.STL  l_calf.STL  l_calf_collision.STL  l_hip_pitch_roll02.STL  l_hip_pitch_roll02_collision.STL  l_hip_roll_yaw03.STL  l_hip_roll_yaw03_collision.STL  l_thigh04.STL  l_thigh04_collision.STL  pelvis01.STL  pelvis01_collision.STL  r_ankle_roll.STL  r_ankle_roll_collision.STL  r_calf.STL  r_calf_collision.STL  r_hip_pitch_roll02.STL  r_hip_pitch_roll02_collision.STL  r_hip_roll_yaw03.STL  r_hip_roll_yaw03_collision.STL  r_thigh04.STL  r_thigh04_collision.STL
src/QUB_URDF/urdf/: QUB_visual_URDF.csv  QUB_visual_URDF.urdf
src/QUB_URDF_fin/meshes/: L_ankle_link.STL  L_calf_link.STL  L_foot_link.STL  L_hip_r_link.STL  L_hip_y_link.STL  L_thigh_link.STL  R_ankle_link.STL  R_calf_link.STL  R_foot_link.STL  R_hip_r_link.STL  R_hip_y_link.STL  R_thigh_link.STL  base_link.STL  pelvis_link.STL
src/QUB_URDF_fin/urdf/: QUB v1.2 urdf.csv  QUB_v1.2_@Mac.urdf  QUB_v1.2_urdf.urdf
src/QUB_URDF_v2/meshes/: L_Ankle_pitch.STL  L_Ankle_roll.STL  L_Foot.STL  L_Hip_pitch.STL  L_Hip_roll.STL  L_Hip_yaw.STL  L_Knee_pitch_L.STL  L_Knee_pitch_R.STL  L_Rodend_ball_L.STL  L_Rodend_ball_R.STL  L_Rodend_body_L.STL  L_Rodend_body_R.STL  L_Thigh_pitch_1.STL  (+21 more)
src/urdf_first/: CMakeLists.txt  package.xml
(+17 files in other folders)
